--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@
 # Folders
 _obj
 _test
+public
 
 # Architecture specific extensions/prefixes
 *.[568vq]
@@ -21,3 +22,4 @@ _testmain.go
 
 *.exe
 *.test
+sports
